create js file and added computerplay()'

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <script></script>
+        <script type="text/javascript" src="jscript.js"></script>
     </head>
     <body>
         hello!
