added a loop to take 5 inputs from users

--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
     </head>
     <body>
         hello!
+        Please visit console.
+        please press
+        cmd + option + c
     </body>
 </html>
